--- a/requirements.txt
+++ b/requirements.txt
@@ -10,22 +10,28 @@ bcrypt==4.2.0
 certifi==2024.8.30
 cffi==1.17.1
 charset-normalizer==3.3.2
+click==8.1.7
 contourpy==1.3.0
 cryptography==43.0.1
 cycler==0.12.1
 dataclasses-json==0.6.7
 distro==1.9.0
+dnspython==2.6.1
+email_validator==2.2.0
 exceptiongroup==1.2.2
 fastapi==0.114.2
+fastapi-cli==0.0.5
 fonttools==4.53.1
 frozenlist==1.4.1
 greenlet==3.1.0
 groq==0.11.0
 h11==0.14.0
 httpcore==1.0.5
+httptools==0.6.1
 httpx==0.27.2
 idna==3.10
 importlib_resources==6.4.5
+Jinja2==3.1.4
 jiter==0.5.0
 jsonpatch==1.33
 jsonpointer==3.0.0
@@ -41,8 +47,11 @@ langchain-text-splitters==0.3.0
 langgraph==0.2.22
 langgraph-checkpoint==1.0.10
 langsmith==0.1.121
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
 marshmallow==3.22.0
 matplotlib==3.9.2
+mdurl==0.1.2
 msgpack==1.1.0
 multidict==6.1.0
 mypy-extensions==1.0.0
@@ -56,14 +65,18 @@ pycparser==2.22
 pydantic==2.9.1
 pydantic-settings==2.5.2
 pydantic_core==2.23.3
+Pygments==2.18.0
 PyMySQL==1.1.1
 pyparsing==3.1.4
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+python-multipart==0.0.9
 pytz==2024.2
 PyYAML==6.0.2
 regex==2024.9.11
 requests==2.32.3
+rich==13.8.1
+shellingham==1.5.4
 six==1.16.0
 sniffio==1.3.1
 SQLAlchemy==2.0.35
@@ -71,9 +84,14 @@ starlette==0.38.5
 tenacity==8.5.0
 tiktoken==0.7.0
 tqdm==4.66.5
+typer==0.12.5
 typing-inspect==0.9.0
 typing_extensions==4.12.2
 tzdata==2024.1
 urllib3==2.2.3
+uvicorn==0.30.6
+uvloop==0.20.0
+watchfiles==0.24.0
+websockets==13.0.1
 yarl==1.11.1
 zipp==3.20.2
