--- a/requirements.txt
+++ b/requirements.txt
@@ -46,6 +46,7 @@ googleapis-common-protos==1.65.0
 greenlet==3.1.0
 groq==0.11.0
 grpcio==1.66.1
+gunicorn==23.0.0
 h11==0.14.0
 html2text==2024.2.26
 httpcore==1.0.5
